Fix logo alignment

--- a/scss/blocks/sidebar_nav.scss
+++ b/scss/blocks/sidebar_nav.scss
@@ -113,6 +113,7 @@
   }
 
   .navbar-brand {
+    display: block;
     padding: 1rem;
     margin: 0;
   }
